Fixed image cutting off issue on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -10579,6 +10579,7 @@ textarea:focus {
 .rad-showcase__bg--mobile img {
   margin-top: 20px;
   max-height: 300px;
+  margin-bottom: 40px;
 }
 .rad-showcase .container {
   position: relative;
